@@ -1166,6 +1166,7 @@ John Mackenzie <John.Mackenzie.extern@icn.siemens.de>
 Ricky Marek <ricky@waveip.com>
 Patrick Maassen <patrick.maassen@meco.nl>
 Christian Schuhegger <Christian.Schuhegger@cern.ch>
+David L Smith  <david.l.smith@larc.nasa.gov>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
